--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <section id="hero">
+        <div class="container">
+            <div class="info"></div>
+            <h1>This will be the main heading</h1>
+            <h2> Lorem ipsum dolor sit amet consectetur adipisicing eli</h2>
+            <p>lorem ipsum nbhjgdwdbwmbd jhdjwdfnw jdjwdwnd jwdbjwbdw nwgdwjd</p>
+            <a href="#">Press If You Dare</a>
+         </div>
+    </section>
     
 </body>
 </html>
