--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
 </head>
 
 <body>
+           
     <section id="hero">
         <div class="container">
-            <div class="info"></div>
-            <h1>This will be the main heading</h1>
-            <h2> Lorem ipsum dolor sit amet consectetur adipisicing eli</h2>
-            <p>lorem ipsum nbhjgdwdbwmbd jhdjwdfnw jdjwdwnd jwdbjwbdw nwgdwjd</p>
-            <a href="#">Press If You Dare</a>
+            <div class="info">
+            <h1>This is heading</h1>
+            <h2> Lorem ipsum dolor sit amet</h2>
+            <p>lorem ipsum nbhjgdwdbwmbd jhdjwdfnw jdjwdwnd
+                 jwdbjwbdw nwgdwjd bfhjwebfiuewfbeiquwbfioewfoiewfieon 
+                 vniewnvioewneiw necienfiwenf ciewfioewjf kenkenfoe 
+            </p>
+            <a href="#">You Dare</a>
+         </div>
          </div>
     </section>
     
