--- a/index.html
+++ b/index.html
@@ -3,22 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>ThePizzaformula</title>
+    <!-- linked this to the ccs file  -->
+    <link rel="stylesheet" href="style.css"> 
 </head>
 
 <body>
-           
+     <!-- This section is for the background image and texts       -->
     <section id="hero">
         <div class="container">
             <div class="info">
-            <h1>This is heading</h1>
-            <h2> Lorem ipsum dolor sit amet</h2>
-            <p>lorem ipsum nbhjgdwdbwmbd jhdjwdfnw jdjwdwnd
-                 jwdbjwbdw nwgdwjd bfhjwebfiuewfbeiquwbfioewfoiewfieon 
-                 vniewnvioewneiw necienfiwenf ciewfioewjf kenkenfoe 
-            </p>
-            <a href="#">You Dare</a>
+                 <div class="wrapper">
+                    <div class="loading-text"> <!--Loading-text-->
+                      <h1>The Pizza Is Calling
+                          <span class="dot-one"> .</span>
+                          <span class="dot-two"> .</span>
+                          <span class="dot-three"> .</span>
+                      </h1>
+                    </div> <!--/Loading-text-->
+                  </div> <!-- /Wrapper -->
+                       <h2> Will You Answer It ? </h2>
+                       <p>lorem ipsum nbhjgdwdbwmbd jhdjwdfnw jdjwdwnd
+                      jwdbjwbdw nwgdwjd bfhjwebfiuewfbeiquwbfioewfoiewfieon 
+                      vniewnvioewneiw necienfiwenf ciewfioewjf kenkenfoe 
+                      </p>
+                     <a href="#">You Dare</a>
          </div>
          </div>
     </section>
