--- a/index.html
+++ b/index.html
@@ -15,19 +15,14 @@
             <div class="info">
                  <div class="wrapper">
                     <div class="loading-text"> <!--Loading-text-->
-                      <h1>The Pizza Is Calling
+                      <h1>The Pizza Calls
                           <span class="dot-one"> .</span>
                           <span class="dot-two"> .</span>
                           <span class="dot-three"> .</span>
                       </h1>
                     </div> <!--/Loading-text-->
                   </div> <!-- /Wrapper -->
-                       <h2> Will You Answer It ? </h2>
-                       <p>lorem ipsum nbhjgdwdbwmbd jhdjwdfnw jdjwdwnd
-                      jwdbjwbdw nwgdwjd bfhjwebfiuewfbeiquwbfioewfoiewfieon 
-                      vniewnvioewneiw necienfiwenf ciewfioewjf kenkenfoe 
-                      </p>
-                     <a href="#">You Dare</a>
+                     <a href="#">Yes Chef!</a>
          </div>
          </div>
     </section>
