--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
      <!-- This section is for the background image and texts       -->
+     <!-- hero section -->
     <section id="hero">
         <div class="container">
             <div class="info">
@@ -19,12 +20,26 @@
                           <span class="dot-one"> .</span>
                           <span class="dot-two"> .</span>
                           <span class="dot-three"> .</span>
+                          <img src="https://img.icons8.com/fluency/48/salami-pizza.png" alt="salami-pizza"/>
                       </h1>
                     </div> <!--/Loading-text-->
                   </div> <!-- /Wrapper -->
                      <a href="#">Yes Chef!</a>
          </div>
          </div>
+    </section>
+    
+    <section id="Pizza">
+        <div class="Pizza container">
+            <div class="class services-top">
+            <h1 class="section title">find out the recipe</h1><p>
+                nad ajbdajbd dj jabdw  djwbdw sn djwdbw wqjbdwjbd swdf wjbw wjdbwdbjbwdjbdwjbd 
+            </p>
+        </div>
+        <div class="class service-bottom">
+        </div>
+        </div>
+
     </section>
     
 </body>
