--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
                           <span class="dot-one"> .</span>
                           <span class="dot-two"> .</span>
                           <span class="dot-three"> .</span>
-                          <img src="https://img.icons8.com/fluency/48/salami-pizza.png" alt="salami-pizza"/>
                       </h1>
                     </div> <!--/Loading-text-->
                   </div> <!-- /Wrapper -->
@@ -29,18 +28,21 @@
          </div>
     </section>
     
-    <section id="Pizza">
-        <div class="Pizza container">
-            <div class="class services-top">
-            <h1 class="section title">find out the recipe</h1><p>
-                nad ajbdajbd dj jabdw  djwbdw sn djwdbw wqjbdwjbd swdf wjbw wjdbwdbjbwdjbdwjbd 
-            </p>
-        </div>
-        <div class="class service-bottom">
-        </div>
-        </div>
-
+    <section id="hero2">
+        <div class="container2">
+            <div class="info2">
+                 <div class="wrapper">
+                    <div class="loading-text2"> <!--Loading-text-->
+                      <h1>The Pizza Calls
+                          <span class="dot-one"> .</span>
+                          <span class="dot-two"> .</span>
+                          <span class="dot-three"> .</span>
+                      </h1>
+                    </div> <!--/Loading-text-->
+                  </div> <!-- /Wrapper -->
+                     <a href="#">Yes Chef!</a>
+         </div>
+         </div>
     </section>
-    
 </body>
 </html>
