--- a/index.html
+++ b/index.html
@@ -12,6 +12,23 @@
 </head>
 
 <body>
+    <!-- new sectiom -->
+    <div class="nav">
+        <div class="container">
+            <div class="nav__wrapper">
+                <a href="./index.html" class="logo"><img src="./images/reshot-icon-chef-hat-TE9QFH3ZSP.svg" alt="Mango's Kitchen">
+                    </a>
+                    <nav>
+                        <div class="nav__icon">
+                            
+                        </div>
+            
+                    </nav>
+            </div>
+
+        </div>
+    </div>
+    <!-- end of section -->
     <h1>This Is The Home Page</h1>
 
      <!-- aos script -->
