--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | The Pizza</title>
+    <title>The Pizza</title>
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./globalStyles.css">
     <link rel="stylesheet" href="./components.css">
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <!-- new sectiom -->
+    <!-- nav sectiom -->
     <div class="nav">
         <div class="container">
             <div class="nav__wrapper">
@@ -22,12 +22,12 @@
                     <nav>
                         <div class="nav__icon">
                             <svg xmlns="http://www.w3.org/2000/svg" 
-                            width="24" height="24" viewBox="0 0 24 24" 
-                            fill="none" stroke="currentColor" stroke-width="2" 
-                            stroke-linecap="round" stroke-linejoin="round">
-                            <line x1="3" y1="12" x2="21" y2="12"/>
-                            <line x1="3" y1="6" x2="21" y2="6"/>
-                            <line x1="3" y1="18" x2="21" y2="18"/>
+                              width="24" height="24" viewBox="0 0 24 24" fill="none" 
+                             stroke="currentColor" stroke-width="2" 
+                             stroke-linecap="round" stroke-linejoin="round">
+                              <line x1="3" y1="12" x2="21" y2="12"/>
+                              <line x1="3" y1="6" x2="21" y2="6"/>
+                              <line x1="3" y1="18" x2="21" y2="18"/>
                             </svg>
                         </div>
                         <div class="bg__Overlay"></div>
@@ -41,11 +41,12 @@
                                 </svg>
                             </div>
                             <div class="nav__list__wrapper">
+
                                 <li><a href="index.html" class="nav__link">Home</a></li>
                                 <li><a href="menu.html" class="nav__link">Menu</a></li>
                                 <li><a href="about.html" class="nav__link">About</a></li>
                                 <li><a href="contact.html" class="nav__link">Contact</a></li>
-                                <li><a href="booking.html" class="btn-primary-btn">Book Table</a></li>
+                                <li><a href="booking.html" class="btn primary-btn">Book Table</a></li>
                             </div>
                         </ul>
             
