--- a/index.html
+++ b/index.html
@@ -3,26 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Pratty Forumala</title>
+    <title>Galactic Enigma Burger</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
 
 <body>
+
   <section id="hero">
     <div class="container">
         <div class="info">
-            <h1>This is the Pratty formula</h1>
-            <h2>Lorem ipsum dolor sit amet.</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                 Sunt ut officiis consequuntur voluptas illum deleniti 
-                 omnis maxime hic laboriosam beatae.
-            </p>
-            <a href="#">Button</a>
+            <h1>The Galactic Enigma Burger</h1>
+            <h2>Aeternum Vinculum.</h2>
+            <p> In a bustling city that never sleeps, there was a small, nondescript diner tucked away in a forgotten alley. It was known only to a select few, the ones who dared to venture off the beaten path. This was the home of the legendary "Galactic Enigma Burger".
+            </p><br>
+            <a href="#Chef"><i class="material-symbols-outlined" id="arrow_drop_down">arrow_drop_down
+            </i></a> 
         </div>
     </div>
+ </section>  
 
-  </section>  
+<br>
+
+ <section id="Chef">
+   <div class="container">
+     <div class="chef">
+      hffnejfjebfjebfjebfjwbfjebfjebfejfbejfbjewbfefewbfuebfwebfjwebfw
+      ofefeuwrferferfrefr
+      fefbjfbref
+
+     </div>
+   </div>
+
+ </section>
+
+ 
 </body>
 
 </html>
