--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h2>Aeternum Vinculum.</h2>
             <p> In a bustling city that never sleeps, there was a small, nondescript diner tucked away in a forgotten alley. It was known only to a select few, the ones who dared to venture off the beaten path. This was the home of the legendary "Galactic Enigma Burger".
             </p><br>
-            <a href="#Chef"><i class="material-symbols-outlined" id="arrow_drop_down">arrow_drop_down
+            <a href="#SacredComponents"><i class="material-symbols-outlined" id="arrow_drop_down">arrow_drop_down
             </i></a> 
         </div>
     </div>
@@ -26,16 +26,39 @@
 
 <br>
 
- <section id="Chef">
+ <section id="SacredComponents">
    <div class="container">
      <div class="chef">
-      hffnejfjebfjebfjebfjwbfjebfjebfejfbejfbjewbfefewbfuebfwebfjwebfw
-      ofefeuwrferferfrefr
-      fefbjfbref
+      <h1>Sacred Components</h1>
+      <br>
+      <p>
+        <ul>
+          <li>1 Long Green Pepper, the fruit of the earth</li>
+          <li>1 Yellow Onion, the bulb of flavor</li>
+          <li>1 spoon of Fry Seasoning, the dust of spice</li>
+          <li>10 ounces of Ground Beef, the flesh of the bovine</li>
+          <li>2 Demi-Baguettes, the staff of life</li>
+          <li>1 Beef Stock Concentrate, the essence of the beast</li>
+          <li>2 dollops of Dijon Mustard, the tang of the gods</li>
+          <li>½ cup of Mexican Cheese Blend, the curdled milk of the cow</li>
+          <li>1.5 ounces of Blue Corn Tortilla Chips, the crunch of the harvest</li>
+          <li>1 dash of Hot Sauce, the fire of the dragon</li>
+          <li>Salt, the white gold of the earth</li>
+          <li>Pepper, the black pearls of spice</li>
+          <li>1 spoon of Cooking Oil, the liquid of lubrication</li>
+        </ul>
+      </p>
 
      </div>
    </div>
+ </section>
 
+ <br>
+
+ <section id="Sacred Ritual">
+  <div class="container">
+
+  </div>
  </section>
 
  
