--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Galactic Enigma Burger</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 
@@ -29,6 +30,10 @@
  <section id="SacredComponents">
    <div class="container">
      <div class="chef">
+
+    <a href="#hero"><i class="material-symbols-outlined" id="arrow_drop_up">arrow_drop_up
+   </i></a> 
+
       <h1>Sacred Components</h1>
       <br>
       <p>
@@ -48,6 +53,9 @@
           <li>1 spoon of Cooking Oil, the liquid of lubrication</li>
         </ul>
       </p>
+      <br>
+      <a href="#SacredRitual"><i class="material-symbols-outlined" id="arrow_drop_down">arrow_drop_down
+     </i></a> 
 
      </div>
    </div>
@@ -55,8 +63,26 @@
 
  <br>
 
- <section id="Sacred Ritual">
+ <section id="SacredRitual">
   <div class="container">
+    <div class="book">
+      <a href="#SacredComponents"><i class="material-symbols-outlined" id="arrow_drop_up">arrow_drop_up
+      </i></a> 
+
+      <h1>Sacred Ritual</h1>
+      <br>
+      <ol>
+        <li>Preheat thy oven to 450 degrees, as hot as the desert sun. Cleanse thy green pepper and slice it into thin strips. Do the same with thy onion.</li>
+        <li>Anoint thy green pepper with oil, Fry Seasoning, salt, and pepper. Place it in the oven and let it roast until it turns golden brown and tender.</li>
+        <li>In a large pan, heat a drizzle of oil. Add thy onion and season it with salt and pepper. Cook until it turns brown and soft. Add thy ground beef, Fry Seasoning, salt, and pepper. Cook until the beef turns brown and is cooked through.</li>
+        <li>Slice thy baguettes lengthwise, but do not cut all the way through. Toast them in the oven until they turn lightly golden.</li>
+        <li>Once thy beef is done, stir in the stock concentrate, mustard, and 2 spoons of water. Top with Mexican cheese blend and cover the pan until the cheese melts.</li>
+        <li>Fill thy baguettes with the beef filling and roasted green pepper. Top with as much hot sauce as thou desirest. Divide the sandwiches and tortilla chips between thy plates.</li>
+      </ol>
+      
+
+
+    </div>
 
   </div>
  </section>
